app/assets/stylesheets/application.css.scss
@import "bootstrap";

@import "binary_admin";
@import "bootstrap-datepicker3";
@import "rails_bootstrap_forms";
@import "form_shooter";
@import "mainmenu";

.margin-top {
  margin-top: 10px;
}

.current {
  padding-right: 16px;
  background-repeat: no-repeat;
  background-position: right center;
}

.fixedlayout {
  table-layout: fixed;
}

.photohead {
  width: 66px;
}

th .desc {
  background-image: image-url("arrow_down.png");
}

th .asc {
  background-image: image-url("arrow_up.png");
}

td {
  vertical-align: middle !important;
}

.logo-field {
  margin-top: 60px;
}

